# Projeto_De_Estudo_Rust

./: Cargo.toml
debian/: projeto-de-estudo-rust_0.1.0-1_amd64.deb
gerenciador_de_projetos_de_estudo/: Cargo.toml
gerenciador_de_projetos_de_estudo/src/: main.rs
gerenciador_de_projetos_de_estudo/src/exercicios/: ex_001.rs  ex_002.rs
instaldores/: projeto-de-estudo-rust_0.1.0-1_amd64.deb
src/: exercicios.rs  lista_de_exercicios.rs  lista_de_exercícios.json  main.rs  recursos.rs
src/exercicios/: ex_001.rs  ex_002.rs  ex_003.rs  ex_004.rs  ex_005.rs  ex_006.rs  ex_007.rs  ex_008.rs  ex_009.rs  ex_010.rs  ex_011.rs  ex_012.rs  ex_013.rs  ex_014.rs  ex_015.rs  ex_016.rs  ex_017.rs  ex_018.rs  ex_019.rs  ex_020.rs  ex_021.rs  ex_022.rs  ex_023.rs  ex_024.rs  ex_025.rs  ex_026.rs  ex_027.rs  ex_028.rs  ex_029.rs  ex_030.rs  ex_031.rs  ex_032.rs  ex_033.rs  ex_034.rs  ex_035.rs  ex_036.rs  ex_037.rs  ex_038.rs  ex_039.rs  ex_040.rs  (+34 more)
src/exercicios/ex_001/: numeros.rs
src/exercicios/ex_005/: notas.rs
src/exercicios/ex_006/: comprimentos.rs
src/exercicios/ex_009/: parede.rs
src/exercicios/ex_015/: tipos_de_cateto.rs  triangulos.rs
src/exercicios/ex_017/: alunos.rs
src/exercicios/ex_018/: alunos.rs
src/exercicios/ex_019/: nome.rs
src/exercicios/ex_020/: numero.rs
src/exercicios/ex_022/: nome.rs
src/exercicios/ex_024/: nome_completo.rs
src/exercicios/ex_025/: jogo.rs
src/recursos/: descricao_de_exercicio.rs  exercicio_informacoes.rs  final_do_exercicio.rs  limpar_terminal.rs  perguntar_se_quer_iniciar_novamento_o_exercicio.rs
(+60 files in other folders)
